--- a/webapps/ROOT/WEB-INF/classes/application-prod.yml
+++ b/webapps/ROOT/WEB-INF/classes/application-prod.yml
@@ -89,3 +89,7 @@ ak: 2FBSHRRFZ5YLE3VPBMDK
 sk: vqYIdh3xmKfjlhcM0qEwCeuY8QfRKHYnGYHWoDBx
 local: cn-north-1
 bucketName: chinaventure-static
+baiduUrl: http://data.zz.baidu.com/urls?site=https://www.chinaventure.com.cn&token=EAN4cqLpc6TbSSFO
+cvinfoUrl: https://www.chinaventure.com.cn
+cvinfoMUrl: https://m.chinaventure.com.cn
+baiduToken: EAN4cqLpc6TbSSFO
