--- a/webapps/ROOT/WEB-INF/classes/application-dev.yml
+++ b/webapps/ROOT/WEB-INF/classes/application-dev.yml
@@ -88,3 +88,7 @@ ak: 2FBSHRRFZ5YLE3VPBMDK
 sk: vqYIdh3xmKfjlhcM0qEwCeuY8QfRKHYnGYHWoDBx
 local: cn-north-1
 bucketName: cvinfo-test
+baiduUrl: http://data.zz.baidu.com/urls?site=https://www.chinaventure.com.cn&token=EAN4cqLpc6TbSSFO
+cvinfoUrl: https://www.chinaventure.com.cn
+cvinfoMUrl: https://m.chinaventure.com.cn
+baiduToken: EAN4cqLpc6TbSSFO
