--- a/webapps/ROOT/WEB-INF/classes/application-prod.yml
+++ b/webapps/ROOT/WEB-INF/classes/application-prod.yml
@@ -85,6 +85,8 @@ subjectNewsList: /cms/api/updateSubjectNewsList
 pvRedisUrl: /cms/api/updateCountNewsList
 versionUrl: /cms/api/updateAppVersion
 talkUrl: /cms/api/updateVtalkList
+updateSignUpUrl: /cms/api/updateCmsSignUp
+updateSignUpInfoUrl: /cms/api/updateCmsSignUpInfo
 endPoint: https://obs.cn-north-1.myhuaweicloud.com
 ak: 2FBSHRRFZ5YLE3VPBMDK
 sk: vqYIdh3xmKfjlhcM0qEwCeuY8QfRKHYnGYHWoDBx
