--- a/webapps/ROOT/WEB-INF/classes/application-prod.yml
+++ b/webapps/ROOT/WEB-INF/classes/application-prod.yml
@@ -65,7 +65,7 @@ rocket:
   nameServer: 192.168.0.133:9876;192.168.0.165:9876;192.168.0.40:9876
   basePackage: com.chinaventure
 localUrl: /image/
-esUrl:  https://esdata.chinaventure.com.cn/cv-sensitive/api/sensitive/internally/check
+esUrl:  https://119.3.241.171/cv-sensitive/api/sensitive/internally/check
 abstractUrl: http://192.168.0.40:8010/cv-tokenizer/lexer
 redisUrl: http://192.168.0.52
 newsUrl: /cms/api/updateNewsDetail
