--- a/webapps/ROOT/WEB-INF/classes/application-dev.yml
+++ b/webapps/ROOT/WEB-INF/classes/application-dev.yml
@@ -91,6 +91,7 @@ updateUserSignInListUrl: /cms/api/updateUserSignInList
 updateMeetingList: /cms/api/updateMeetingList
 updateSubjectList: /cms/api/updateSubjectList
 deleteSubjectNewsList: /cms/api/deleteSubjectNewsList
+updateVisitList: /cms/api/updateVisitList
 nginxIp: 119.254.13.83
 nginxCommand: /usr/local/expect/expect_scp
 nginxName: root
