--- a/webapps/ROOT/WEB-INF/classes/application-prod.yml
+++ b/webapps/ROOT/WEB-INF/classes/application-prod.yml
@@ -92,6 +92,7 @@ updateMeetingList: /cms/api/updateMeetingList
 updateSubjectList: /cms/api/updateSubjectList
 deleteSubjectNewsList: /cms/api/deleteSubjectNewsList
 updateVisitList: /cms/api/updateVisitList
+updateFirstClassList: /cms/api/updateFirstClassList
 nginxIp: 192.168.0.228,192.168.0.98,192.168.0.82
 nginxCommand: /mnt/sdc/expect/expect_scp
 nginxName: root
