--- a/webapps/ROOT/WEB-INF/classes/application.yml
+++ b/webapps/ROOT/WEB-INF/classes/application.yml
@@ -6,7 +6,7 @@ server:
     min-spare-threads: 30
   port: 8080
   servlet:
-    context-path: /chinaventure-admin
+    context-path: /
 
 spring:
   mvc:
